[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Brinkmann"
]
keywords = ["arm", "bare-metal", "bootloader", "lm4f120", "launchpad"]
license = "MIT"
name = "stellaris-launchpad-bootloader"
readme = "README.md"
version = "0.2.0"
description = "A Tockloader compatible bootloader for the Texas Instruments Stellaris LM4F120 Launchpad (and most likely the Tiva-C TM4C120 Launchpad too)"
repository = "https://github.com/thejpster/stellaris-launchpad"
categories = ["hardware-support"]
homepage = "https://www.thejpster.org.uk"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"
debug = true

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true

[dependencies]
r0 = "0.2"
alloc-cortex-m = "0.3"
cortex-m = "0.3"
volatile-register = "0.2"
lm4f120 = { path = "../lm4f120" }
# lm4f120 = "0.6"
embedded-serial = "0.5"
# tockloader-proto = { path = "../tockloader-proto" }
tockloader-proto = "0.2"

[badges]
travis-ci = { repository = "thejpster/stellaris-launchpad", branch = "bootloader" }

[[bin]]
name = "bootloader"
path = "./src/main.rs"
crate-type = ["staticlib"]
