[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Brinkmann"
]
keywords = ["arm", "bare-metal", "blink", "lm4f120", "launchpad"]
license = "MIT"
name = "stellaris-launchpad"
readme = "README.md"
version = "0.9.0"
description = "A bare-metal crate supporting the Texas Instruments Stellaris LM4F120 Launchpad (and most likely the Tiva-C TM4C120 Launchpad too)"
repository = "https://github.com/thejpster/stellaris-launchpad"
categories = ["hardware-support"]
homepage = "https://www.thejpster.org.uk"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"
debug = true
incremental = false
codegen-units = 1

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
incremental = false
codegen-units = 1

[dependencies]
r0 = "0.1"
cortex-m = "0.3"
volatile-register = "0.2"
# lm4f120 = "0.9.0"
lm4f120 = { path = "../lm4f120" }
embedded-hal = "0.1.0"
alloc-cortex-m = { git = "https://github.com/japaric/alloc-cortex-m.git" }
rlibc = "1.0"

[badges]
travis-ci = { repository = "thejpster/stellaris-launchpad", branch = "master" }
