[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Brinkmann"
]
keywords = ["arm", "bare-metal", "blink", "lm4f120", "launchpad"]
license = "MIT"
name = "stellaris-launchpad"
readme = "README.md"
version = "0.11.2"
description = "A bare-metal crate supporting the Texas Instruments Stellaris LM4F120 Launchpad (and most likely the Tiva-C TM4C120 Launchpad too)"
repository = "https://github.com/thejpster/stellaris-launchpad"
categories = ["hardware-support"]
homepage = "https://www.thejpster.org.uk"

[profile.release]
lto = true
debug = true
opt-level = "s"

[dependencies]
r0 = "0.1"
cortex-m = "0.4"
volatile-register = "0.2"
lm4f120 = "0.10.0"
embedded-hal = "0.2"

[badges]
travis-ci = { repository = "thejpster/stellaris-launchpad", branch = "master" }
